# gst-colorconv

./: Makefile.am  configure.ac
backends/: Makefile.am
backends/qcom/: Makefile.am  gstcolorconvqcom.c
gst/: Makefile.am
gst/colorconv/: Makefile.am  gstcolorconv.c  gstcolorconv.h  gstcolorconvbackend.h  plugin.c
rpm/: gst-colorconv.spec
